Commit con archivos actualizados, añadi un .gitignore, y corregi errores menores

--- a/ej_practico.ipynb
+++ b/ej_practico.ipynb
@@ -32,26 +32,26 @@
     {
      "data": {
       "text/plain": [
-       "{' Agustin': [0, 0, 0],\n",
-       " 'Yanina': [10, 2, 5],\n",
-       " 'Andrés': [4, 0, 1],\n",
-       " 'Ariadna': [0, 0, 0],\n",
-       " 'Bautista': [5, 5, 5],\n",
+       "{'AGUSTIN': [0, 0, 0],\n",
+       " 'YANINA': [10, 2, 5],\n",
+       " 'ANDRÉS': [4, 0, 1],\n",
+       " 'ARIADNA': [0, 0, 0],\n",
+       " 'BAUTISTA': [5, 5, 5],\n",
        " 'CAROLINA': [14, 2, 2],\n",
        " 'CESAR': [0, 0, 0],\n",
-       " 'David': [0, 0, 0],\n",
-       " 'Diego': [7, 1, 1],\n",
-       " 'Dolores': [2, 2, 2],\n",
+       " 'DAVID': [0, 0, 0],\n",
+       " 'DIEGO': [7, 1, 1],\n",
+       " 'DOLORES': [2, 2, 2],\n",
        " 'DYLAN': [1, 0, 1],\n",
        " 'ELIANA': [1, 5, 5],\n",
-       " 'Emanuel': [1, 5, 5],\n",
-       " 'Fabián': [5, 0, 0],\n",
-       " 'Noelia': [6, 1, 1],\n",
-       " 'Francsica': [1, 0, 0],\n",
+       " 'EMANUEL': [1, 5, 5],\n",
+       " 'FABIÁN': [5, 0, 0],\n",
+       " 'NOELIA': [6, 1, 1],\n",
+       " 'FRANCSICA': [1, 0, 0],\n",
        " 'FEDERICO': [1, 2, 2],\n",
-       " 'Fernanda': [2, 3, 3],\n",
+       " 'FERNANDA': [2, 3, 3],\n",
        " 'GONZALO': [0, 0, 1],\n",
-       " 'Nancy ': [11, 0, 0]}"
+       " 'NANCY': [11, 0, 0]}"
       ]
      },
      "execution_count": 2,
@@ -66,10 +66,10 @@
     "assists = [0, 5, 1, 0, 5, 2, 0, 0, 1, 2, 1, 5, 5, 0, 1, 0, 2, 3, 1, 0]\n",
     "\n",
     "stats = {}  # Estructura que usaremos\n",
+    "names = names.upper()\n",
+    "modules.new_Structure(goals,goals_avoided,assists,stats,names)\n",
     "\n",
-    "modules.new_Structure(names,goals,goals_avoided,assists,stats)\n",
-    "\n",
-    "stats\n"
+    "stats"
    ]
   },
   {
@@ -85,23 +85,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('Jugador: ', 'Andrés', ' anoto la cantidad de ', 4, ' goles.')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Jugador: ', 'AGUSTIN', ' anoto la cantidad de ', 0, ' goles.')\n"
+     ]
     }
    ],
    "source": [
     "indice = int(input('Para buscar un jugador, ingrese un numero (A partir de 0): '))\n",
     "names = names.split(', ')\n",
-    "modules.get_Player(names,stats, indice)\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(modules.get_Player(names,stats, indice))"
    ]
   },
   {
@@ -125,7 +119,7 @@
     }
    ],
    "source": [
-    "print('Jugador/a más influyente: ',modules.max_Influence(names,stats))"
+    "print('Jugador/a más influyente: ',modules.max_Influence(stats))"
    ]
   },
   {
@@ -149,7 +143,7 @@
     }
    ],
    "source": [
-    "print('Promedio de goles en los 25 partidos: ',modules.get_Average(names,stats))"
+    "print('Promedio de goles en los 25 partidos: ',modules.get_Average(stats))"
    ]
   },
   {
@@ -161,12 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CAROLINA  tiene un promedio de  0.56\n"
+     ]
+    }
+   ],
    "source": [
     "Clave = input('Ingrese el nombre del jugador para conocer su promedio:')\n",
-    "\n",
+    "Clave = Clave.upper()\n",
     "print(Clave,' tiene un promedio de ',modules.get_player_Average(Clave,stats))"
    ]
   }
